fix(dialog): change outline offset to be visible with backdrop

--- a/packages/dialog/src/dialog.pcss
+++ b/packages/dialog/src/dialog.pcss
@@ -45,6 +45,7 @@
 
     &:focus-visible {
       outline: var(--sds-focus-outline);
+      outline-offset: calc(var(--sds-focus-outline-width) * -1);
     }
 
     &::backdrop {
